--- a/public/emoji.css
+++ b/public/emoji.css
@@ -1,139 +1,103 @@
-body {
-  background: #fff url('graphics/stucco.png');
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  color: #333;
-  margin: 0;
-  padding: 0;
-  line-height: 1.4em;}
+html { background-image: url(graphics/stucco.png); }
+body, h1, h2, h3 {
+  color: #555;
+  font: normal 14px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif; }
 h1 {
-  width: 80%;
-  margin-bottom: 16px;
-  margin-top: 14px;
-  font-size: 48px;
-  line-height: 1em;
-  font-weight: normal;
-  font-family: 'Yanone Kaffeesatz', sans-serif;}
+  margin: 0;
+  color: #333;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-size: 48px; }
 h2 {
-  margin-top:1.2em;
-  font-size: 22px;
-  color: #555;}
-a { color: #333;}
+  font-size: 21px;
+  font-weight: bold; }
+h3 { font-size: 16px; }
+p { margin: .5em 0; }
+a { color: #333; }
 a:hover, a.hover { color: #999; }
+
 #content, #footer {
-  padding: 0 20px 0 20px;
   margin: 0 auto;
-  max-width: 1024px;}
-  .share {
-    -webkit-border-top-left-radius: 8px;
-    -webkit-border-bottom-left-radius: 8px;
-    -moz-border-radius-bottomright: 8px;
-    -moz-border-radius-bottomleft: 8px;
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
-    border-left: 2px dotted #ddd;
-    border-bottom: 2px dotted #ddd;
-    border-top: 2px dotted #ddd;
-    background: rgba(200,200,200,.2);
-    text-align: right;
-    position: absolute;
-    top: 166px;
-    padding: 8px;
-    right: 0;
-    height: 204px;
-    width: 55px;}
-    #twitter, #gplus, #fb {
-      text-align: center;
-      margin: 0 auto 6px auto;
-      margin-bottom: 6px;
-      height: 64px; }
-    #twitter {margin-right: 5px; }
-    .share iframe {
-      opacity:.45;
-      filter:alpha(opacity=45);
-      filter: "alpha(opacity=45)"; }
+  padding: 0 20px;
+  max-width: 1024px; }
+
+.share {
+  position: absolute;
+  top: 166px;
+  right: 0;
+  padding: 4px;
+  background-color: rgba(200,200,200,.2);
+  border: 2px dotted #ddd;
+  border-right: 0;
+  -webkit-border-radius: 8px 0 0 8px;
+  -moz-border-radius: 8px 0 0 8px;
+  border-radius: 8px 0 0 8px; }
+  .share div {
+    height: 64px;
+    margin: 4px;
+    text-align: center; }
+  .share iframe {
+    filter:alpha(opacity=45);
+    filter: "alpha(opacity=45)";
+    opacity: .45; }
     .share:hover iframe {
-      opacity:1;
       filter:alpha(opacity=100);
-      filter: "alpha(opacity=100)"; }
-  p.intro {
-    max-width: 820px;
-    margin-top: 0;
-    margin-right: 160px;
-    color: #666;}
-    .product { font-weight: bold; }
-  #github_and_campfire {margin-top: 1.2em;}
-  .sounds { margin-top: .6em; }
-    .sounds h3 {
-      margin-bottom: 0;
-      color: #666;
-      font-size: 16px;
-      font-weight: normal;}
-    .sounds li { height: 24px; }
-  ul {
-    padding:0;
-    margin: 0;}
-  li {
+      filter: "alpha(opacity=100)";
+      opacity: 1; }
+
+.intro {
+  max-width: 80%;
+  margin-bottom: 2em;
+  font-size: 16px; }
+  .product { font-weight: bold; }
+
+.buttons {
+  padding: 0 0 1em 0;
+  color: #333;
+  font-family: "Courier", monospace; }
+  .buttons li {
     list-style: none;
     float: left;
-    width: 256px;
-    height: 30px; }
-    ul.buttons div {
-      min-width: 110px;
-      font-size: 14px;
-      float: left;
-      font-family: "Courier", monospace;
-      padding: 4px 0;}
-    ul.buttons div.hover { margin-left: -4px; }
-    ul.buttons.active { margin-left: 0;}
-      ul.buttons img, ul.buttons .emoji { vertical-align: middle; }
-      ul.buttons img {
-         height: 22px;
-         width: 22px;
-      }
-div#footer {
-  background-color:rgba(200,200,200,0.15);
-  border-top: 3px dotted #ddd;
-  margin-top: 2em;
-  padding: 1em;
-  font-size: 14px;
-  color: #666;}
-  #footer p {line-height: 1em; }
+    width: 254px; }
+  .buttons div {
+    float: left;
+    padding: 4px 0; }
+    .buttons div.hover { margin-left: -4px; }
+  .buttons img {
+    vertical-align: middle;
+    height: 22px;
+    width: 22px; }
 
 #flash-test {
   width: 1px;
   height: 1px; }
 
-.clearfix:after {
-  zoom: 1;
-  content: ".";
-  display: block;
-  height: 0;
-  clear: both;
-  visibility: hidden; }
+#footer {
+  padding: 1.5em 20px;
+  background-color: rgba(200,200,200,.15);
+  border-top: 3px dotted #ddd; }
+
+.clearfix:before, .clearfix:after {
+  content: "";
+  display: table; }
+  .clearfix:after { clear: both; }
+  .clearfix { *zoom: 1; }
 
 @media screen and (max-width: 640px) {
   .share {
-    vertical-align: middle;
-    background: none;
-    width: 220px;
-    height: 70px;
-    padding: 0;
-    margin: 2em auto 0 auto;
     position: static;
-    display: block;
+    width: 180px;
+    height: 70px;
+    margin: 0 auto 2em auto;
+    background: none;
     border: none; }
-  ul, p.intro { margin-right: 0; }
-  #twitter, #gplus, #fb {
-    float: left;
-    margin-right: 12px; }
+  .share div { float: left; }
   .share iframe {
-    opacity:1;
     filter:alpha(opacity=100);
-    filter: "alpha(opacity=100)"; }
+    filter: "alpha(opacity=100)";
+    opacity: 1; }
 }
-/* jnotify */
 
+/* jnotify */
 .jnotify-container {
   position: fixed;
   top: 2px;
@@ -146,12 +110,10 @@ div#footer {
   overflow-x: hidden;
   overflow-y: auto;
 }
-
 .jnotify-container .jnotify-notification {
   position: relative;
   margin-bottom: 5px;
 }
-
 .jnotify-container .jnotify-notification .jnotify-background {
   position: absolute;
   top: 2px;
@@ -163,13 +125,10 @@ div#footer {
   -moz-opacity: 7.90;
   opacity: 0.40;
   z-index: 1;
-
-  /* round the corners */
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
   border-radius: 10px;
 }
-
 .jnotify-container .jnotify-notification a.jnotify-close,
 .jnotify-container .jnotify-notification a.jnotify-close:link,
 .jnotify-container .jnotify-notification a.jnotify-close:visited,
@@ -186,7 +145,6 @@ div#footer {
   z-index: 3;
   cursor: pointer;
 }
-
 .jnotify-container .jnotify-notification .jnotify-message {
   position: relative;
   z-index: 2;
@@ -196,7 +154,6 @@ div#footer {
   font: 14px Arial,Helvetica,sans-serif;
   line-height: 1.2em;
 }
-
 .jnotify-container .jnotify-notification .jnotify-message * {
   font-size: 1em;
 }
@@ -205,7 +162,6 @@ div#footer {
 .jnotify-container .jnotify-notification-error .jnotify-background {
   background-color: #d79eac;
 }
-
 .jnotify-container .jnotify-notification-error .jnotify-close,
 .jnotify-container .jnotify-notification-error .jnotify-message {
   color: #a72947 !important;
@@ -215,7 +171,6 @@ div#footer {
 .jnotify-container .jnotify-notification-warning .jnotify-background {
   background-color: #fff7d1;
 }
-
 .jnotify-container .jnotify-notification-warning .jnotify-close,
 .jnotify-container .jnotify-notification-warning .jnotify-message {
   color: #c2a928 !important;
