--- a/public/style.css
+++ b/public/style.css
@@ -1,134 +1,162 @@
 html {
-  color: #444;
-  font-family: "Helvetica Neue", helvetica, arial, sans-serif;
-  font-size: 14px;
-  line-height: 1.5;
-  background: #fefefe; }
-
+    color: #444;
+    font-family: "Helvetica Neue", helvetica, arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.5;
+    background: #fefefe;
+}
 h1 {
-  margin: 0;
-  font-family: 'Yanone Kaffeesatz', sans-serif;
-  font-size: 38px;
-  text-transform: uppercase;
-  font-weight: normal; }
-
-a { color: inherit; }
-  a:hover { color: #999; }
-
+    margin: 0;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
+    font-size: 38px;
+    text-transform: uppercase;
+    font-weight: normal;
+}
+a {
+    color: inherit;
+}
+a:hover {
+    color: #999;
+}
 ul {
-  display: table;
-  padding: 0 0 1em 1.5em;
-  font-family: monospace; }
-  li {
+    display: table;
+    padding: 0 0 1em 1.5em;
+    font-family: monospace;
+}
+li {
     list-style: none;
     float: left;
     width: 330px;
-    margin-bottom: .5em; }
-    li .hover { margin-left: -4px; }
-    li img {
-      vertical-align: middle;
-      height: 22px;
-      width: 22px; }
-
+    margin-bottom: .5em;
+}
+li .hover {
+    margin-left: -4px;
+}
+li img {
+    vertical-align: middle;
+    height: 22px;
+    width: 22px;
+}
 #content {
-  margin: 0 auto;
-  padding: 0 30px; }
-  #header {
+    margin: 0 auto;
+    padding: 0 30px;
+}
+#header {
     overflow: hidden;
     zoom: 1;
     position: relative;
-    border-bottom: 1px solid rgba(0,0,0,.1);
-    padding: 10px 0 7px 0; }
-  #description {
+    border-bottom: 1px solid rgba(0, 0, 0, .1);
+    padding: 10px 0 7px 0;
+}
+#description {
     width: 85%;
     margin: 12px 0 0 0;
     border-top: 1px solid #fff;
-    font-weight: 300; }
-  #description a { font-weight: bold; }
-  #footer {
+    font-weight: 300;
+}
+#description a {
+    font-weight: bold;
+}
+#footer {
     padding: 8px 20px;
-    background: rgba(200,200,200,.2);
+    background: rgba(200, 200, 200, .2);
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     border-top: 1px solid #ddd;
     border-left: 1px solid #ddd;
-    border-right: 1px solid #ddd; }
-
+    border-right: 1px solid #ddd;
+}
 .search {
-  position: absolute;
-  top: 18px;
-  right: 0;
-  padding: 5px 15px;
-  font: inherit;
-  border-radius: 20px;
-  border: 1px solid rgba(0,0,0,.2); }
-  .search:focus {
+    position: absolute;
+    top: 18px;
+    right: 0;
+    padding: 5px 15px;
+    font: inherit;
+    border-radius: 20px;
+    border: 1px solid rgba(0, 0, 0, .2);
+}
+.search:focus {
     outline: none;
     border-color: rgba(82, 168, 236, 0.8);
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 4px rgba(82, 168, 236, 0.3); }
-  .search:-moz-placeholder { color: #a1a1a1; }
-
-#share > div { display: inline; }
-
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 4px rgba(82, 168, 236, 0.3);
+}
+.search:-moz-placeholder {
+    color: #a1a1a1;
+}
+#share > div {
+    display: inline;
+}
 #carbonads {
-  float: right;
-  padding: 8px 8px 6px 8px;
-  margin: 16px 0 16px 32px;
-  background-color: #fff;
-  border: 1px solid #ededed;
-  border-radius: 3px;
-  line-height: 1.4; }
-  #carbonads a { text-decoration: none; }
-  #carbonads a:hover { color: #000; }
-  .carbon-text {
+    float: right;
+    padding: 8px 8px 6px 8px;
+    margin: 16px 0 16px 32px;
+    background-color: #fff;
+    border: 1px solid #ededed;
+    border-radius: 3px;
+    line-height: 1.4;
+}
+#carbonads a {
+    text-decoration: none;
+}
+#carbonads a:hover {
+    color: #000;
+}
+.carbon-text {
     display: block;
     width: 130px;
     padding-bottom: 4px;
     font-size: 12px;
-    color: #555; }
-  .carbon-poweredby {
-    font-size: 11px;
-    color: #999; }
-
-@media screen and (max-width: 640px) {
-  .search {
-    position: relative;
-    top: 0; }
-  #description { width: 100%; }
+    color: #555;
 }
-
+.carbon-poweredby {
+    font-size: 11px;
+    color: #999;
+}
+@media screen and (max-width: 640px) {
+    .search {
+        position: relative;
+        top: 0;
+    }
+    #description {
+        width: 100%;
+    }
+}
 #flash-test {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 1px;
-  height: 1px; }
-
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1px;
+    height: 1px;
+}
 .jnotify-container {
-  position: fixed;
-  top: 1em;
-  right: 1em;
-  z-index: 999; }
-  .jnotify-notification {
+    position: fixed;
+    top: 1em;
+    right: 1em;
+    z-index: 999;
+}
+.jnotify-notification {
     position: relative;
-    margin-bottom: .5em; }
-  .jnotify-background {
+    margin-bottom: .5em;
+}
+.jnotify-background {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0,0,0,.33);
-    border-radius: 10px; }
-  .jnotify-message {
+    background: rgba(0, 0, 0, .33);
+    border-radius: 10px;
+}
+.jnotify-message {
     position: relative;
     padding: .5em 1em;
     color: #fff;
-    font: inherit; }
-
+    font: inherit;
+}
 #campfire-sounds > li > a {
-  text-decoration: none;
-  font-size: 12px; }
-
+    text-decoration: none;
+    font-size: 12px;
+}
 #campfire-sounds > li > div {
-  display: inline-block; }
+    display: inline-block;
+}
